@@ -101,7 +101,7 @@ module ActiveSupport #:nodoc:
         
         # Returns a new Time representing the start of the day (0:00)
         def beginning_of_day
-          self - self.seconds_since_midnight
+          (self - self.seconds_since_midnight).change(:usec => 0)
         end
         alias :midnight :beginning_of_day
         alias :at_midnight :beginning_of_day
